make update-swagger (#159)
E2E Test Run #48
